<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HowToActivity">

    <ImageView
        android:id="@+id/imageView_background"
        android:layout_width="340dp"
        android:layout_height="319dp"
        android:layout_marginEnd="22dp"
        android:layout_marginStart="22dp"
        android:contentDescription="@string/imagemBackground"
        android:src="@drawable/man_car"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_p1"
        android:layout_width="316dp"
        android:layout_height="67dp"
        android:layout_marginEnd="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="33dp"
        android:text="@string/passo_1"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_p2"
        android:layout_width="316dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="17dp"
        android:text="@string/passo_2"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView_p1"
        app:layout_constraintStart_toStartOf="@+id/textView_p1"
        app:layout_constraintTop_toBottomOf="@+id/textView_p1" />

    <TextView
        android:id="@+id/textView_p3"
        android:layout_width="316dp"
        android:layout_height="78dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/passo_3"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView_p2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView_p2"
        app:layout_constraintTop_toBottomOf="@+id/textView_p2" />

    <TextView
        android:id="@+id/textView_p4"
        android:layout_width="316dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/passo_4"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView_p3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView_p3"
        app:layout_constraintTop_toBottomOf="@+id/textView_p3" />

    <TextView
        android:id="@+id/textView_p5"
        android:layout_width="316dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/passo_5"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView_p4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView_p4"
        app:layout_constraintTop_toBottomOf="@+id/textView_p4" />

    <TextView
        android:id="@+id/textView_p6"
        android:layout_width="316dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/passo_6"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView_p5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_p5"
        app:layout_constraintTop_toBottomOf="@+id/textView_p5" />

    <TextView
        android:id="@+id/textView_p7"
        android:layout_width="316dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/passo_7"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView_p6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView_p6"
        app:layout_constraintTop_toBottomOf="@+id/textView_p6" />

</android.support.constraint.ConstraintLayout>